feat: program on build (#2)
* feat: program on build

This commit introduces a few things:
- Revamp Aptos LC as a virtual workspace so that we can have crates dedicated to "programs" and a main one for our light client
- Automatic compilation of "program" to artifacts that can be imported to our ligh client. This is meant to have a quick solution to iterate on "program" implementation.

* feat: artifact

* feat: moving program compilation outside of build

Parallel cargo build lead to a locked state where process would just be stuck in the build. We will now have to rerun the build manually if we want changes to be reflected.

* feat: compiling to riscv

* docs: basic README for workspace

* fix: proper git url

* fix: test profile + testing core & lc

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -60,10 +60,16 @@ jobs:
       - name: build benches
         run: cargo build --benches --release
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
-      # TODO all-features
-      - name: cargo test
+        # TODO all features
+      - name: Run cargo test on aptos-lc-core
         run: |
-          cargo nextest run --release --profile ci
+          cargo nextest run -p aptos-lc-core --release --profile ci
+        working-directory: ${{ github.workspace }}/${{ matrix.package }}
+        env:
+          RUSTFLAGS: "--cfg tokio_unstable"
+      - name: Run cargo test on aptos-lc
+        run: |
+          cargo nextest run -p aptos-lc --release --profile ci
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
       - name: Doctests
         run: |
