--- a/aptos/.cargo/config
+++ b/aptos/.cargo/config
@@ -13,3 +13,16 @@ xclippy = [
 # This is necessary when building aptos-runtime: https://github.com/aptos-labs/aptos-core/pull/11889
 [build]
 rustflags = ["--cfg", "tokio_unstable"]
+
+[profile.ci]
+# Print out output for failing tests as soon as they fail, and also at the end
+# of the run (for easy scrollability).
+failure-output = "immediate-final"
+# Show skipped tests in the CI output.
+status-level = "skip"
+# Do not cancel the test run on the first failure.
+fail-fast = false
+# Mark tests as slow after 5mins, kill them after 20mins
+slow-timeout = { period = "300s", terminate-after = 4 }
+# Retry failed tests once, marked flaky if test then passes
+retries = 1
