--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -1,78 +1,14 @@
-[package]
-name = "aptos-lc"
-version = "0.1.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"
-repository = "https://github.com/wormhole-foundation/example-zk-light-clients"
+[workspace]
+resolver = "2"
 
-[dependencies]
-anyhow = "1.0.79"
-bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
-blst = "0.3.11"
-bytes = { version = "1.5.0", features = ["serde"] }
-getset = "0.1.2"
-hex = "0.4.3"
-itertools = "0.12.1"
-proptest = "1.4.0"
-serde = "1.0.193"
-serde_bytes = "0.11.6"
-serde_json = "1"
-sha3 = "0.11.0-pre.3"
-test-strategy = "0.3.1"
-thiserror = "1.0.56"
-tiny-keccak = { version = "2.0.2", features = ["sha3"] }
-
-# shallow cloning would sure help here https://github.com/rust-lang/cargo/issues/1171
-aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-
-[dev-dependencies]
-cfg-if = "1.0.0"
-reqwest = { version = "0.11.23", features = ["blocking"] }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "0.5", features = ["html_reports"] }
-pprof = { version = "0.13" }
-# Versions to fit aptos crate
-rand = "0.7.3"
-rand_core = "0.5.1"
+members = [
+    "core",
+    "light-client",
+    "aptos-programs",
+    "programs/*"
+]
 
 # Match the forks used by the aptos crates
 [patch.crates-io]
 merlin = { git = "https://github.com/aptos-labs/merlin" }
 x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
-
-[features]
-default = []
-aptos = [
-    "dep:aptos-crypto",
-    "dep:aptos-types",
-    "dep:aptos-executor-test-helpers",
-    "dep:aptos-temppath",
-    "dep:aptos-vm-genesis",
-    "dep:move-core-types",
-    "dep:aptos-sdk",
-    "dep:aptos-executor-types",
-    "dep:aptos-executor",
-    "dep:aptos-vm",
-    "dep:aptos-storage-interface",
-]
-flamegraph = ["pprof/flamegraph", "pprof/criterion"]
-
-[profile.dev-ci]
-inherits = "dev"
-# By compiling dependencies with optimizations, performing tests gets much faster.
-opt-level = 3
-lto = "thin"
-incremental = false
-codegen-units = 16
