feat: bits parser program (#4)
* feat: program on build

This commit introduces a few things:
- Revamp Aptos LC as a virtual workspace so that we can have crates dedicated to "programs" and a main one for our light client
- Automatic compilation of "program" to artifacts that can be imported to our ligh client. This is meant to have a quick solution to iterate on "program" implementation.

* feat: moving program compilation outside of build

Parallel cargo build lead to a locked state where process would just be stuck in the build. We will now have to rerun the build manually if we want changes to be reflected.

* feat: compiling to riscv

* feat: bytes parsing

* refactor: remove logs

* refactor: actually handling bits

* fix: update machine type

* refactor: integrating review

--- a/aptos/aptos-programs/Makefile
+++ b/aptos/aptos-programs/Makefile
@@ -10,19 +10,16 @@ PROGRAMS := $(notdir $(wildcard $(PROGRAMS_DIR)/*))
 # Default target
 .PHONY: all clean $(PROGRAMS)
 
-all: $(PROGRAMS) move_artifacts clean_elf
+all: $(PROGRAMS) clean_elf
 
 # Build targets for each program
 $(PROGRAMS):
 	@echo "Building program $@"
 	@# Command to build each program
 	@cd $(PROGRAMS_DIR)/$@ && rustup run succinct cargo prove build
-
-# Move and rename artifacts after build, finally remove elf directory
-move_artifacts:
 	@echo "Moving artifacts..."
 	@mkdir -p $(ARTIFACTS_DIR)
-	@$(foreach prog,$(PROGRAMS),mv $(ELF_DIR)/$(BUILD_RESULT_NAME) $(ARTIFACTS_DIR)/$(prog)-program;)
+	@mv $(ELF_DIR)/$(BUILD_RESULT_NAME) $(ARTIFACTS_DIR)/$@-program
 
 # Clean elf directory
 clean_elf:
