--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -6,6 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Aptos crates
 aptos-lc-core = { path = "../core" }
-wp1-core = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
 aptos-programs = { path = "../aptos-programs" }
+
+# WP1 crates
+wp1-core = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+
+#Others
+serde = { version = "1.0", features = ["derive", "rc"] }
+thiserror = "1.0.58"
+
+[dev-dependencies]
+bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
+
+[features]
+default = []
+aptos = ["aptos-lc-core/aptos"]
