feat: merkle program (#5)
* feat: program on build

This commit introduces a few things:
- Revamp Aptos LC as a virtual workspace so that we can have crates dedicated to "programs" and a main one for our light client
- Automatic compilation of "program" to artifacts that can be imported to our ligh client. This is meant to have a quick solution to iterate on "program" implementation.

* feat: artifact

* feat: moving program compilation outside of build

Parallel cargo build lead to a locked state where process would just be stuck in the build. We will now have to rerun the build manually if we want changes to be reflected.

* feat: bytes parsing

* refactor: remove logs

* refactor: actually handling bits

* feat: merkle program

* feat: merkle program test

* feat: proper program w/ test

* fix: also poseidon for merkle

* feat: update artifacts

--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -12,3 +12,5 @@ members = [
 [patch.crates-io]
 merlin = { git = "https://github.com/aptos-labs/merlin" }
 x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
+# WP1 patch
+tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
