--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -11,7 +11,7 @@ aptos-lc-core = { path = "../core" }
 aptos-programs = { path = "../aptos-programs" }
 
 # WP1 crates
-wp1-core = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+wp1-sdk = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
 
 #Others
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -19,7 +19,16 @@ thiserror = "1.0.58"
 
 [dev-dependencies]
 bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
+cfg-if = "1.0.0"
+criterion = { version = "0.5", features = ["html_reports"] }
+pprof = { version = "0.13" }
 
 [features]
 default = []
 aptos = ["aptos-lc-core/aptos"]
+flamegraph = ["pprof/flamegraph", "pprof/criterion"]
+
+[[bench]]
+name = "merkle"
+required-features = ["aptos"]
+harness = false
