--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -16,10 +16,10 @@ jobs:
         include:
           - runner_label: buildjet-16vcpu-ubuntu-2204
             arch: x86
-    if:
-      github.event.issue.pull_request
-      && github.event.issue.state == 'open'
-      && (contains(github.event.comment.body, '!benchmark')
+    if: |
+      github.event.issue.pull_request &&
+      github.event.issue.state == 'open' &&
+      contains(github.event.comment.body, '!benchmark')
     env:
       CARGO_NET_GIT_FETCH_WITH_CLI: "true"
     steps:
