--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -48,9 +48,11 @@ jobs:
         run: |
           for bench in $(find light-client/benches -name '*.rs'); do
             bench_name=$(basename $bench .rs)
-            cargo criterion --features aptos --bench $bench_name > "${bench_name}_output.txt"
+            cargo criterion --features aptos --bench $bench_name &> "${bench_name}_output.txt"
           done
         working-directory: ${{ github.workspace }}/aptos
+        env:
+          RUST_LOG: "debug"
 
       - name: Save benchmark output
         id: save_benchmark_output
