fix: only execute benches (#18)

--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -46,20 +46,13 @@ jobs:
 
       - name: Run all benchmarks
         run: |
-          mkdir -p benchmark_outputs
           for bench in $(find light-client/benches -name '*.rs'); do
             bench_name=$(basename $bench .rs)
-            cargo criterion --features aptos --bench $bench_name &> "benchmark_outputs/${bench_name}_output.txt"
+            cargo criterion --features aptos --bench $bench_name
           done
         working-directory: ${{ github.workspace }}/aptos
         env:
           RUST_LOG: "debug"
-
-      - name: Upload benchmark outputs
-        uses: actions/upload-artifact@v2
-        with:
-          name: benchmark-outputs
-          path: ${{ github.workspace }}/aptos/benchmark_outputs
 
       - name: Comment on successful run
         if: success()
@@ -68,8 +61,6 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           body: |
             `!benchmark` action succeeded! :rocket:
-
-            Benchmark outputs are available [here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts).
 
             https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
