--- a/aptos/.cargo/config
+++ b/aptos/.cargo/config
@@ -3,7 +3,6 @@
 # clippy doesn't currently allow for specifiying project-wide lints in a
 # configuration file. This is a similar workaround to the ones presented here:
 # <https://github.com/EmbarkStudios/rust-ecosystem/issues/59>
-# TODO: add support for --all-features
 xclippy = [
     "clippy", "--all-targets", "--all-features", "--",
     "-Wclippy::all",
@@ -12,7 +11,7 @@ xclippy = [
 
 # This is necessary when building aptos-runtime: https://github.com/aptos-labs/aptos-core/pull/11889
 [build]
-rustflags = ["--cfg", "tokio_unstable"]
+rustflags = ["--cfg", "tokio_unstable", "-C", "target-cpu=native"]
 
 [profile.ci]
 # Print out output for failing tests as soon as they fail, and also at the end
