--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -19,7 +19,7 @@ jobs:
     if: |
       github.event.issue.pull_request &&
       github.event.issue.state == 'open' &&
-      contains(github.event.comment.body, "!benchmark")
+      contains(github.event.comment.body, '!benchmark')
     env:
       CARGO_NET_GIT_FETCH_WITH_CLI: "true"
     steps:
