chore: Try to debug bench pipe (#24)

--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -58,6 +58,7 @@ jobs:
             for bench in $(find light-client/benches -name '*_base.rs'); do
               bench_name=$(basename $bench .rs)
               result=$(cargo criterion --features aptos --bench $bench_name)
+              echo "$result"
               output+="<details><summary>${bench_name}</summary>$(printf "$result")</details>"
             done
           fi
