feat: limiting things to print (#26)

--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -51,18 +51,20 @@ jobs:
           if echo '${{ github.event.comment.body }}' | grep -q '!benchmark --prod'; then
             for bench in $(find light-client/benches -name '*_prod.rs'); do
               bench_name=$(basename $bench .rs)
-              result=$(cargo criterion --features aptos --bench $bench_name | grep -E '┌╴|└╴|INFO summary' | tr '│' '\│')
-              output+="<details><summary>${bench_name}</summary>$(printf "$result")</details>"
+              cargo criterion --features aptos --bench $bench_name | tee -a /tmp/&bench_name.txt 2>&1
+              result=$(cat /tmp/&bench_name.txt | grep -E 'INFO summary' | tr '│' '\│' )
+              output+="<details><summary>${bench_name}</summary>$(echo "$result")</details>"
             done
           elif echo '${{ github.event.comment.body }}' | grep -q '!benchmark'; then
             for bench in $(find light-client/benches -name '*_base.rs'); do
               bench_name=$(basename $bench .rs)
-              result=$(cargo criterion --features aptos --bench $bench_name | grep -E '┌╴|└╴|INFO summary' | tr '│' '\│')
-              output+="<details><summary>${bench_name}</summary>$(printf "$result")</details>"
+              cargo criterion --features aptos --bench $bench_name | tee -a /tmp/&bench_name.txt 2>&1
+              result=$(cat /tmp/&bench_name.txt | grep -E 'INFO summary' | tr '│' '\│' )
+              output+="<details><summary>${bench_name}</summary>$(echo "$result")</details>"
             done
           fi
           echo "BENCH_RES<<EOF" >> $GITHUB_OUTPUT
-          printf "$output\n" >> $GITHUB_OUTPUT
+          echo "$output" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
         working-directory: ${{ github.workspace }}/aptos
         env:
