ci: Switch to working token (#30)
* ci: Switch to working token

* chore: Switch to WP1 `dev`

* ci: Switch `clippy` runner to `ubuntu-latest`

* chore: Update to latest wp1 API

* fix: update tests & deps

---------

Co-authored-by: Thomas Chataigner <tom.chataigner@yahoo.fr>

--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Set up git private repo access
         run: |
-          git config --global url."https://${{ secrets.PRIVATE_PULL_TOKEN }}@github.com/".insteadOf ssh://git@github.com
-          git config --global url."https://${{ secrets.PRIVATE_PULL_TOKEN }}@github.com".insteadOf https://github.com
+          git config --global url."https://${{ secrets.REPO_TOKEN }}@github.com/".insteadOf ssh://git@github.com
+          git config --global url."https://${{ secrets.REPO_TOKEN }}@github.com".insteadOf https://github.com
 
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
