feat: first basic sig verification (#8)
* feat: first basic sig verification

* fix: wp1_core -> wp1_sdk

* fix: xclippy

* feat: to_bytes & from_bytes for interesting types

* feat: merge parser and sig verification

* fix: recompute programs

* ci: sig bench

* fix: fix panic in bench

* feat: cycletracker

* feat: precompiles

* fix: alter sig

* fix: remove sig

* fix: add back parsing

* fix: fixed bug aptoswrapper

* refactor: one sample for sig

* feat: bytes base benchmark

* refactor: integrate reviews

- Added tests for uleb format
- Removed unused dep
- More verbose constants
- Switch back to wp1 dev

* fix: refactor shenanigans

* refactor: removing unused dep & using const

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,6 +47,7 @@ jobs:
       fail-fast: false
     env:
       RUSTFLAGS: -D warnings
+      CARGO_NET_GIT_FETCH_WITH_CLI: "true"
     steps:
       - name: Set up git private repo access
         run: |
@@ -86,6 +87,8 @@ jobs:
       matrix:
         package:
           - "aptos"
+    env:
+      CARGO_NET_GIT_FETCH_WITH_CLI: "true"
     steps:
       - name: Set up git private repo access
         run: |
