--- a/aptos/.cargo/config
+++ b/aptos/.cargo/config
@@ -7,6 +7,7 @@ xclippy = [
     "clippy", "--all-targets", "--all-features", "--",
     "-Wclippy::all",
     "-Wclippy::disallowed_methods",
+    "-Wclippy::missing_const_for_fn"
 ]
 
 # This is necessary when building aptos-runtime: https://github.com/aptos-labs/aptos-core/pull/11889
