--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -8,8 +8,9 @@ repository = "https://github.com/wormhole-foundation/example-zk-light-clients"
 
 [dependencies]
 anyhow = "1.0.79"
+#From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
 bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
-bls12_381 = { version = "0.8.0", features = ["experimental"] }
+bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm", features = ["experimental"] }
 bytes = { version = "1.5.0", features = ["serde"] }
 getset = "0.1.2"
 hex = "0.4.3"
