--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -18,6 +18,8 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 thiserror = "1.0.58"
 
 [dev-dependencies]
+aptos-programs = { path = "../aptos-programs", features = ["bench"] }
+# From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
 bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
 cfg-if = "1.0.0"
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -30,5 +32,15 @@ flamegraph = ["pprof/flamegraph", "pprof/criterion"]
 
 [[bench]]
 name = "merkle_base"
+required-features = ["aptos"]
+harness = false
+
+[[bench]]
+name = "bytes_base"
+required-features = ["aptos"]
+harness = false
+
+[[bench]]
+name = "sig_prod"
 required-features = ["aptos"]
 harness = false
