--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -41,7 +41,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Install deps
         run: |
-          sudo apt-get update && sudo apt-get install -y pkg-config libudev-dev
+          sudo apt-get update || true
+          sudo apt-get install -y pkg-config libudev-dev
           cargo install cargo-criterion
 
       - name: Run all benchmarks
