--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,7 +59,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Install deps
         run: |
-          sudo apt-get update && sudo apt-get install -y pkg-config libudev-dev
+          sudo apt-get update || true
+          sudo apt-get install -y pkg-config libudev-dev
       # make sure benches don't bit-rot
       - name: build benches
         run: cargo build --benches --release
@@ -101,7 +102,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Install deps
         run: |
-          sudo apt-get update && sudo apt-get install -y pkg-config libudev-dev
+          sudo apt-get update || true
+          sudo apt-get install -y pkg-config libudev-dev
       # See '.cargo/config' for list of enabled/disabled clippy lints
       - name: rustfmt
         run: cargo fmt --all --check
