--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -8,6 +8,42 @@ members = [
     "programs/*"
 ]
 
+[workspace.dependencies]
+anyhow = "1.0.79"
+aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+# From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
+bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
+bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "bls12381-g1-decompress" }
+bytes = "1.5.0"
+cfg-if = "1.0.0"
+criterion = "0.5"
+getset = "0.1.2"
+hex = "0.4.3"
+itertools = "0.12.1"
+move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0" }
+pprof = "0.13"
+rand = "0.7.3"
+rand_core = "0.5.1"
+reqwest = "0.11.23"
+serde = "1.0.193"
+serde_bytes = "0.11.6"
+serde_json = "1"
+sha2 = "0.9"
+thiserror = "1.0.58"
+tiny-keccak = "2.0.2"
+wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+wp1-sdk = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+
 # Match the forks used by the aptos crates
 [patch.crates-io]
 merlin = { git = "https://github.com/aptos-labs/merlin" }
