--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -7,40 +7,39 @@ homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"
 repository = "https://github.com/wormhole-foundation/example-zk-light-clients"
 
 [dependencies]
-anyhow = "1.0.79"
-#From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
-bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
-bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "bls12381-g1-decompress", features = ["experimental"] }
-bytes = { version = "1.5.0", features = ["serde"] }
-getset = "0.1.2"
-hex = "0.4.3"
-itertools = "0.12.1"
-serde = "1.0.193"
-serde_bytes = "0.11.6"
-serde_json = "1"
-sha2 = "0.9"
-thiserror = "1.0.56"
-tiny-keccak = { version = "2.0.2", features = ["sha3"] }
+anyhow = { workspace = true }
+bcs = { workspace = true }
+bls12_381 = { workspace = true, features = ["experimental"] }
+bytes = { workspace = true, features = ["serde"] }
+getset = { workspace = true }
+hex = { workspace = true }
+itertools = { workspace = true }
+serde = { workspace = true }
+serde_bytes = { workspace = true }
+serde_json = { workspace = true }
+sha2 = { workspace = true }
+thiserror = { workspace = true }
+tiny-keccak = { workspace = true, features = ["sha3"] }
 
 # shallow cloning would sure help here https://github.com/rust-lang/cargo/issues/1171
-aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
-move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
+aptos-crypto = { workspace = true, optional = true }
+aptos-executor = { workspace = true, optional = true }
+aptos-executor-test-helpers = { workspace = true, optional = true }
+aptos-executor-types = { workspace = true, optional = true }
+aptos-sdk = { workspace = true, optional = true }
+aptos-storage-interface = { workspace = true, optional = true }
+aptos-temppath = { workspace = true, optional = true }
+aptos-types = { workspace = true, optional = true }
+aptos-vm = { workspace = true, optional = true }
+aptos-vm-genesis = { workspace = true, optional = true }
+move-core-types = { workspace = true, optional = true }
 # Versions to fit aptos crate
-rand = { version = "0.7.3", optional = true }
-rand_core = { version = "0.5.1", optional = true }
+rand = { workspace = true, optional = true }
+rand_core = { workspace = true, optional = true }
 
 [dev-dependencies]
-cfg-if = "1.0.0"
-reqwest = { version = "0.11.23", features = ["blocking"] }
+cfg-if = { workspace = true }
+reqwest = { workspace = true, features = ["blocking"] }
 
 [features]
 default = []
