--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -11,22 +11,21 @@ aptos-lc-core = { path = "../core" }
 aptos-programs = { path = "../aptos-programs" }
 
 # Aptos crate
-aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
+aptos-crypto = { workspace = true, optional = true }
 
 # WP1 crates
-wp1-sdk = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+wp1-sdk = { workspace = true }
 
 #Others
-serde = { version = "1.0", features = ["derive", "rc"] }
-thiserror = "1.0.58"
+serde = { workspace = true, features = ["derive", "rc"] }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 aptos-programs = { path = "../aptos-programs", features = ["bench"] }
-# From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
-bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
-cfg-if = "1.0.0"
-criterion = { version = "0.5", features = ["html_reports"] }
-pprof = { version = "0.13" }
+bcs = { workspace = true }
+cfg-if = { workspace = true }
+criterion = { workspace = true, features = ["html_reports"] }
+pprof = { workspace = true }
 
 [features]
 default = []
