--- a/aptos/programs/bytes/Cargo.toml
+++ b/aptos/programs/bytes/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
-wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev", package = "wp1-derive" }
-wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev", package = "wp1-zkvm" }
+wp1-derive = { workspace = true }
+wp1-zkvm = { workspace = true }
