--- a/aptos/programs/ratchet/Cargo.toml
+++ b/aptos/programs/ratchet/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
-bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
-wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev", package = "wp1-zkvm" }
+bcs = { workspace = true }
+wp1-zkvm = { workspace = true }
