--- a/aptos/programs/bytes/Cargo.toml
+++ b/aptos/programs/bytes/Cargo.toml
@@ -1,3 +1,4 @@
+[workspace]
 [package]
 version = "0.1.0"
 name = "bytes-program"
@@ -5,5 +6,5 @@ edition = "2021"
 
 [dependencies]
 aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
-wp1-derive = { workspace = true }
-wp1-zkvm = { workspace = true }
+wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
