--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -5,7 +5,6 @@ members = [
     "core",
     "light-client",
     "aptos-programs",
-    "programs/*"
 ]
 
 [workspace.dependencies]
@@ -27,6 +26,7 @@ bytes = "1.5.0"
 cfg-if = "1.0.0"
 # To work around the sample size >= 10 limit until we fix issue #48
 criterion = { git = "https://github.com/huitseeker/criterion.rs", branch = "remove-sample-limit", version = "0.5" }
+glob = "0.3.1"
 getset = "0.1.2"
 hex = "0.4.3"
 itertools = "0.12.1"
@@ -43,6 +43,7 @@ tiny-keccak = "2.0.2"
 wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
 wp1-sdk = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
 wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+wp1-helper = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
 
 # Match the forks used by the aptos crates
 [patch.crates-io]
