--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -114,3 +114,97 @@ jobs:
       - name: cargo clippy
         run: cargo xclippy -D warnings
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
+
+  cycle-count-regression:
+    runs-on: warp-ubuntu-latest-x64-32x
+    steps:
+      - name: Set up git private repo access
+        run: |
+          git config --global url."https://${{ secrets.REPO_TOKEN }}@github.com/".insteadOf ssh://git@github.com
+          git config --global url."https://${{ secrets.REPO_TOKEN }}@github.com".insteadOf https://github.com
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+      - uses: Swatinem/rust-cache@v2
+      - uses: taiki-e/install-action@nextest
+      - name: Install deps
+        run: |
+          sudo apt-get update || true
+          sudo apt-get install -y pkg-config libudev-dev
+
+          git clone https://github.com/wormhole-foundation/wp1.git
+          cd wp1/cli
+          cargo install --locked --path .
+
+          cd ~
+          cargo prove install-toolchain          
+      - name: Get cycle counts for PR
+        id: get_cycles_base
+        run: |
+          CYCLE_COUNTS='[]'
+
+          # TODO: Remove hardcoded test names
+          for test_name in "test_merkle_execute" "test_ratchet_execute" "test_sig_execute"; do
+            cargo nextest run --verbose --release --profile ci --features aptos --package aptos-lc --no-capture -E "test($test_name)" | tee out.txt 2>&1
+            num_cycles=$(cat out.txt | grep -o 'finished execution clk = [0-9]\+' | awk -F'= ' '{ print $2 }')
+            CYCLE_COUNTS=$(echo $CYCLE_COUNTS | jq -c ". += [{\"${test_name}\": \"$num_cycles\"}]")
+          done
+          echo "CYCLE_COUNTS=$CYCLE_COUNTS" | tee -a "$GITHUB_OUTPUT"
+        working-directory: ${{ github.workspace }}/aptos/light-client
+        env:
+          RUST_LOG: debug
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.base_ref }}
+      - name: Get cycle counts for base branch
+        id: regression-check
+        run: |
+          counter=0
+          CYCLE_COUNTS='${{ steps.get_cycles_base.outputs.CYCLE_COUNTS }}'
+          echo "$CYCLE_COUNTS"
+          FAILING_TESTS=""
+          REGRESSION="false"
+
+          # TODO: Remove hardcoded test names
+          for test_name in "test_merkle_execute" "test_ratchet_execute" "test_sig_execute"; do
+            cargo nextest run --verbose --release --profile ci --features aptos --package aptos-lc --no-capture -E "test($test_name)" | tee out.txt 2>&1
+            num_cycles_base=$(cat out.txt | grep -o 'finished execution clk = [0-9]\+' | awk -F'= ' '{ print $2 }')
+            num_cycles_pr=$(echo "$CYCLE_COUNTS" | jq ".[$counter] | to_entries | .[0].value")
+            if [[ "$num_cycles_pr" > "$num_cycles_base" ]]; then
+              echo "Performance regression for test ${test_name}"
+              REGRESSION="true"
+              FAILING_TESTS+="\`${test_name}\`\n"
+              FAILING_TESTS+="Cycles before: ${num_cycles_base//\"/}\n"
+              FAILING_TESTS+="Cycles after: ${num_cycles_pr//\"/}\n"
+            fi
+            counter=$((counter + 1))
+          done
+          echo "regression=$REGRESSION" | tee -a $GITHUB_OUTPUT
+          echo "failing-tests<<EOF" >> $GITHUB_OUTPUT
+          echo -e "$FAILING_TESTS" | tee -a $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          echo "WORKFLOW_URL=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" | tee -a $GITHUB_ENV
+        working-directory: ${{ github.workspace }}/aptos/light-client
+        env:
+          RUST_LOG: debug
+      - name: Comment on failing run
+        if: steps.regression-check.outputs.regression == 'true' && github.event_name == 'pull_request'
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Benchmark cycle count regression check failed :x:
+
+            ${{ steps.regression-check.outputs.failing-tests }}
+
+            ${{ env.WORKFLOW_URL }}
+      - uses: JasonEtco/create-an-issue@v2
+        if: steps.regression-check.outputs.regression == 'true' && github.event_name == 'push'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WORKFLOW_URL: ${{ env.WORKFLOW_URL }}
+          FAILING_TESTS: ${{ steps.regression-check.outputs.failing-tests }}
+        with:
+          update_existing: true
+          filename: .github/BENCH_CYCLE_REGRESSION.md
